# PAOO-Clean

./: README.md
Tema1/include/: ShoppingCart.h
Tema1/src/: ShoppingCart.cpp  main.cpp
Tema2/: CMakeLists.txt
Tema2/include/: ShoppingCart.h
Tema2/src/: ShoppingCart.cpp  main.cpp
Tema3/include/: ShoppingCart.h
Tema3/src/: ShoppingCart.cpp  main.cpp
Tema4/: CMakeLists.txt
Tema4/include/: ShoppingCart.h
Tema4/src/: ShoppingCart.cpp  main.cpp
